# OpenTela

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/commands/: deploy-test.md
.github/workflows/: ci.yml  release.yml
auth/: auth.db  server.py  test_server.py
contrib/auth/: __main__.py  cli.py  models.py  pyproject.toml
contrib/cli/: pyproject.toml  spec.md
contrib/cli/src/otela_cli/: main.py
contrib/cli/src/otela_cli/clusters/: baremetal.py  kubernetes.py
contrib/cli/src/otela_cli/commands/auth/: cli.py
contrib/cli/src/otela_cli/commands/cluster/: cli.py
contrib/cli/src/otela_cli/commands/network/: cli.py
contrib/cli/src/otela_cli/commands/wallet/: cli.py
contrib/cli/src/otela_cli/core/: config.py
contrib/fleet_manager/: README.md  pyproject.toml
contrib/fleet_manager/clusters/: clariden.yaml  euler.yaml  jsc-dev.yaml  jsc.yaml
contrib/fleet_manager/src/fleet_manager/: apply.py  cli.py  cluster.py  deploy.py  relay.py  worker.py
contrib/fleet_manager/src/fleet_manager/templates/: __init__.py  apptainer_multi.sh.j2  apptainer_single.sh.j2  clariden_sglang.toml.j2  enroot_single.sh.j2  relay.cfg.yaml.j2  worker.cfg.yaml.j2
contrib/fleet_manager/src/otela_fleet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
contrib/fleet_manager/tests/: test_apply.py  test_cluster.py  test_connection.py  test_deploy.py  test_relay.py  test_templates.py  test_worker.py
contrib/ownership/: .env.example  README.md  bun.lockb  package-lock.json  package.json
contrib/proxy/: __main__.py  main.py  pyproject.toml  server.py  test_server.py
contrib/serving-simulator/: .gitignore  requirements.txt
contrib/trace_analysis/: plot_all.ipynb  plot_bucket.ipynb  plot_utils.py  trim_output.py  trim_output.sh
deploy/clariden/: job.sh  relay.cfg.yaml  setup.sh  sglang.toml  start-relay.sh  worker.cfg.yaml
docker/: Dockerfile
docs/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json  tsconfig.tsbuildinfo  wrangler.jsonc
meta/: Dockerfile.amd64  Dockerfile.signed-amd64
src/: .golangci.yml  Makefile  go.mod  go.sum
tools/cluster_manager/: config.yaml  main.py  pyproject.toml
tools/cluster_manager/clusters/: __init__.py  base.py  slurm.py
tools/cluster_manager/tests/: test_baremetal.py  test_kubernetes.py  test_main.py  test_slurm.py
(+344 files in other folders)
